--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,10 @@ jobs:
           python-version: '3.9'
       - run: pip install -r requirements.txt
       - run: mkdir images
-      - run: python meme.py
+      - run: python main.py
       - uses: actions/upload-artifact@v4
         with:
           path: |
             stare.txt
             output.csv
+            images/
