--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,6 @@ jobs:
           path: |
             stare.txt
             output.csv
+            contentPro.list
+            contentPro.typ
+            contentPro.wikitext
